--- a/PowerShellScripts/Others/Dockerfile
+++ b/PowerShellScripts/Others/Dockerfile
@@ -2,6 +2,8 @@ from mcr.microsoft.com/powershell:preview
 
 COPY . ./app
 WORKDIR /app
+ENV TERM xterm-256color
+
 RUN chmod 777 "./GetStar.ps1"
 RUN chmod 777 "./DelIng.ps1"
 RUN chmod 777 "./PostIng.ps1"
