--- a/PowerShellScripts/Others/Dockerfile
+++ b/PowerShellScripts/Others/Dockerfile
@@ -3,6 +3,8 @@ from mcr.microsoft.com/powershell:preview
 COPY . ./app
 WORKDIR /app
 ENV TERM xterm-256color
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN chmod 777 "./GetStar.ps1"
 RUN chmod 777 "./DelIng.ps1"
