--- a/PowerShellScripts/Others/Dockerfile
+++ b/PowerShellScripts/Others/Dockerfile
@@ -1,4 +1,4 @@
-from mcr.microsoft.com/powershell
+from mcr.microsoft.com/powershell:preview
 
 COPY . ./app
 
@@ -11,7 +11,7 @@ RUN chmod 777 "./GetStar.ps1"
 RUN chmod 777 "./DelIng.ps1"
 RUN chmod 777 "./PostIng.ps1"
 RUN chmod 777 "./CheckStar.ps1"
-ENTRYPOINT ["pwsh", "./GetStar.ps1"]
+ENTRYPOINT ["pwsh-preview", "./GetStar.ps1"]
 
 #docker -t get-star -f Dockerfile .
 #docker run -d get-star
