镜像修改  默认值的问题

--- a/PowerShellScripts/Others/Dockerfile
+++ b/PowerShellScripts/Others/Dockerfile
@@ -1,7 +1,6 @@
-from mcr.microsoft.com/powershell:preview
+from demisto/powershell:7.2.1.34341
 
 COPY . ./app
-
 WORKDIR /app
 ENV TERM=xterm-256color
 ENV TZ=Asia/Shanghai
@@ -11,7 +10,7 @@ RUN chmod 777 "./GetStar.ps1"
 RUN chmod 777 "./DelIng.ps1"
 RUN chmod 777 "./PostIng.ps1"
 RUN chmod 777 "./CheckStar.ps1"
-ENTRYPOINT ["pwsh-preview", "./GetStar.ps1"]
+ENTRYPOINT ["pwsh", "./GetStar.ps1"]
 
 #docker -t get-star -f Dockerfile .
 #docker run -d get-star
