--- a/PowerShellScripts/CnBlogs/Dockerfile
+++ b/PowerShellScripts/CnBlogs/Dockerfile
@@ -10,7 +10,7 @@ RUN chmod 777 "./GetStar.ps1"
 RUN chmod 777 "./DelIng.ps1"
 RUN chmod 777 "./PostIng.ps1"
 RUN chmod 777 "./CheckStar.ps1"
-ENTRYPOINT ["pwsh", "./GetStar.ps1"]
+ENTRYPOINT ["pwsh", "./GetStar.ps1 -LessThan 1"]
 
 #docker -t get-star -f Dockerfile .
 #docker run -d get-star
