--- a/PowerShellScripts/CnBlogs/Dockerfile
+++ b/PowerShellScripts/CnBlogs/Dockerfile
@@ -6,10 +6,7 @@ ENV TERM=xterm-256color
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-RUN chmod 777 "./GetStar.ps1"
-RUN chmod 777 "./DelIng.ps1"
-RUN chmod 777 "./PostIng.ps1"
-RUN chmod 777 "./CheckStar.ps1"
+RUN chmod 777 *
 ENTRYPOINT ["pwsh", "./GetStar.ps1 -LessThan 1"]
 
 #docker -t get-star -f Dockerfile .
