--- a/WebTools/vue-components/v3/package.json
+++ b/WebTools/vue-components/v3/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
     "vue": "^3.2.45"
   },
   "devDependencies": {
